[build-system]
requires = ["hatchling>=1.27", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "pyis74"
dynamic = ["version"]
description = "Типизированная Python-библиотека для работы с API IS74/Интерсвязь."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "pyis74 contributors" },
]
keywords = ["is74", "intersvyaz", "domofon", "home-assistant", "api-client"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/catemohi/pyis74"
Repository = "https://github.com/catemohi/pyis74"
Issues = "https://github.com/catemohi/pyis74/issues"

[dependency-groups]
lint = [
  "ruff>=0.12",
]
type = [
  "mypy>=1.16",
]
test = [
  "coverage[toml]>=7.8",
  "pytest>=8.4",
  "pytest-asyncio>=1.0",
  "pytest-httpx>=0.35",
]
release = [
  "twine>=6.1",
]
dev = [
  { include-group = "lint" },
  { include-group = "type" },
  { include-group = "test" },
  { include-group = "release" },
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/pyis74"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.md",
  "/CONTRIBUTING.md",
  "/LICENSE",
  "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  "ANN",
  "ASYNC",
  "B",
  "BLE",
  "C4",
  "D",
  "DTZ",
  "E",
  "ERA",
  "F",
  "FBT",
  "I",
  "N",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "SIM",
  "SLOT",
  "T20",
  "TRY",
  "UP",
  "W",
]
ignore = [
  "D203",
  "D213",
  "RUF001",
  "RUF002",
  "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "-ra",
]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pyis74"]

[tool.coverage.report]
show_missing = true
skip_covered = true
